[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m101tools"
version = "0.1.1"
description = "A lightweight toolkit for ML projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mohamed Yosef", email = "mohamed101yosef@gmail.com"}
]
keywords = ["machine-learning", "gpu", "setup", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nvidia-ml-py",
    "python-dotenv",
]

[project.optional-dependencies]
torch = ["torch"]
dev = ["pytest", "pdoc"]

[project.urls]
Homepage = "https://github.com/m101yosef/m101tools"
Issues = "https://github.com/m101yosef/m101tools/issues"

[tool.setuptools.packages.find]
where = ["."]
